# dropshot

./: .Cargo.lock.swp  .git-blame-ignore-revs  .gitignore  2026-03-06-typespec-generation-plan.md  2026-03-06-typespec-nexus-inventory.md  CHANGELOG.adoc  Cargo.toml  MAINTAINERS.adoc  README.adoc  release.toml  renovate.json  rust-toolchain.toml  rustfmt.toml  rustfmt_output  tsp-openapi-comparison.md  tsp-vs-openapi-fidelity.md
dropshot/: Cargo.toml  README-crates.io.md  build.rs  large-service-dep-graph.mmd
dropshot-api-manager/: Cargo.toml  README.md
dropshot-api-manager-example/apis/: Cargo.toml  README.adoc
dropshot-api-manager-example/apis/src/: lib.rs
dropshot-api-manager-types/: Cargo.toml  README.md
dropshot-api-manager-types/src/: apis.rs  lib.rs  validation.rs  versions.rs
dropshot-api-manager/src/: apis.rs  compatibility.rs  environment.rs  git.rs  lib.rs  resolved.rs  spec_files_blessed.rs  spec_files_generated.rs  spec_files_generic.rs  spec_files_local.rs  validation.rs
dropshot-api-manager/src/cmd/: debug.rs  dispatch.rs  list.rs  mod.rs
dropshot/examples/: api-trait-alternate.rs  api-trait-websocket.rs  api-trait.rs  basic.rs  colliding-error-type-names.rs  custom-error-type.rs  custom-error.rs  example.rs  file_server.rs  https.rs  index.rs  module-basic.rs  module-shared-context.rs  multipart.rs  multiple-servers.rs  otel.rs  pagination-basic.rs  pagination-basic.rs.disabled  pagination-marker.rs  pagination-multi-resources.rs  pagination-multi.rs  pagination-multiple-resources.rs  pagination-multiple-sorts.rs  pagination-simple.rs  petstore.rs  request-headers.rs  request-range.rs  schema-with-example.rs  self-referential.rs  server-trait-alternate.rs  server-trait-default.rs  server-trait-websocket.rs  server-trait.rs  server_trait.rs  test-enum-skip-deserializing.rs  versioning.rs  websocket.rs  well-tagged.rs
dropshot/src/: api_description.rs  body.rs  compression.rs  config.rs  dtrace.rs  error.rs  error_status_code.rs  from_map.rs  handler.rs  http_util.rs  lib.rs  logging.rs  otel.rs  pagination.rs  router.rs  schema_util.rs  server.rs  test_util.rs  to_map.rs  tracing.rs  tracing_support.rs  type_util.rs  typespec.rs  versioning.rs  websocket.rs
dropshot/src/extractor/: body.rs  common.rs  header.rs  metadata.rs  mod.rs  path.rs  query.rs  raw_request.rs
dropshot/tests/: fail.rs  test_api_trait.rs  test_config.rs  test_demo.rs  test_detached_shutdown.rs  test_multipart.rs  test_openapi.json  test_openapi.rs  test_openapi_custom_error_types.json  test_openapi_custom_error_types_trait_based.json  test_openapi_fuller.json  test_openapi_old.json  test_openapi_overrides_v1.json  test_openapi_overrides_v2.json  test_openapi_v0.9.0.json  test_openapi_v1.0.0.json  test_openapi_v1.3.1.json  test_pagination.rs  test_pagination_schema.json  test_pagination_schema.rs  test_path_names.rs  test_raw_request.rs  test_starter.rs  test_streaming.rs  test_tls.rs  test_typespec.tsp  test_versions.rs  test_versions_v0.9.0.json  test_versions_v1.0.0.json  test_versions_v1.1.0.json  test_versions_v1.3.1.json  test_versions_v1.4.0.json  test_websocket.rs  wordlist-readme.txt
dropshot/tests/common/: mod.rs
dropshot/tests/fail/: README.adoc  bad_channel1.rs  bad_channel1.stderr  bad_channel10.rs  bad_channel10.stderr  bad_channel11.rs  bad_channel11.stderr  bad_channel12.rs  bad_channel12.stderr  bad_channel13.rs  bad_channel13.stderr  bad_channel14.rs  bad_channel14.stderr  bad_channel15.rs  bad_channel15.stderr  bad_channel16.txt  bad_channel17.rs  bad_channel17.stderr  bad_channel18.rs  bad_channel18.stderr  bad_channel19.rs  bad_channel19.stderr  bad_channel1a.rs  bad_channel1a.stderr  bad_channel1b.rs  bad_channel1b.stderr  bad_channel2.rs  bad_channel2.stderr  bad_channel20.rs  bad_channel20.stderr  bad_channel21.rs  bad_channel21.stderr  bad_channel21a.stderr  bad_channel21b.stderr  bad_channel21c.stderr  bad_channel21d.stderr  bad_channel22.rs  bad_channel22.stderr  bad_channel23.rs  bad_channel23.stderr  (+414 more)
dropshot/tests/integration-tests/: api_trait.rs  common.rs  config.rs  custom_errors.rs  demo.rs  detached_shutdown.rs  gzip.rs  main.rs  multipart.rs  openapi.rs  pagination.rs  pagination_schema.rs  panic_handling.rs  path_names.rs  starter.rs  streaming.rs  tls.rs  typespec.rs  versions.rs
dropshot_endpoint/: Cargo.toml  release.toml
dropshot_endpoint/src/: api_trait.rs  channel.rs  doc.rs  endpoint.rs  error_store.rs  lib.rs  metadata.rs  params.rs  server.rs  syn_parsing.rs  test_util.rs  util.rs
dropshot_endpoint/tests/output/: api_trait_basic.rs  api_trait_no_endpoints.rs  api_trait_operation_id.rs  api_trait_with_custom_params.rs  channel_operation_id.rs  channel_with_custom_params.rs  channel_with_unnamed_params.rs  channel_with_versions.rs  endpoint_basic.rs  endpoint_content_type.rs  endpoint_context_fully_qualified_names.rs  endpoint_operation_id.rs  endpoint_pub_crate.rs  endpoint_weird_but_ok_arg_types_1.rs  endpoint_weird_but_ok_arg_types_2.rs  endpoint_with_custom_params.rs  endpoint_with_doc.rs  endpoint_with_empty_where_clause.rs  endpoint_with_query.rs  endpoint_with_tags.rs  endpoint_with_unnamed_params.rs  endpoint_with_versions_all.rs  endpoint_with_versions_from.rs  endpoint_with_versions_from_identifier.rs  endpoint_with_versions_from_literal.rs  endpoint_with_versions_from_module.rs  endpoint_with_versions_from_until.rs  endpoint_with_versions_from_until_identifiers.rs  endpoint_with_versions_from_until_literals.rs  endpoint_with_versions_from_until_mixed1.rs  endpoint_with_versions_from_until_mixed2.rs  (+7 more)
minimal_example/: Cargo.toml  README.md
minimal_example/src/: main.rs
openapi-manager/: Cargo.toml  README.md
openapi-manager-example/apis/: Cargo.toml  README.adoc
openapi-manager-types/: Cargo.toml  README.md
openapi-manager-types/src/: lib.rs  validation.rs  versions.rs
openapi-manager/src/: apis.rs  environment.rs  git.rs  iter_only.rs  lib.rs  output.rs  resolved.rs  spec_files_blessed.rs  spec_files_generated.rs  spec_files_generic.rs  spec_files_local.rs  test_util.rs  validation.rs
src/: lib.rs  (+9 more)
(+27 files in other folders)
