#
# Dropshot is comprised of two packages.  Consumers only need to know about
# "dropshot".  "dropshot" depends on "dropshot_endpoint", a procedural macro
# used for registering API handler functions.
#
[workspace]
members = ["dropshot", "dropshot_endpoint" ]
default-members = ["dropshot", "dropshot_endpoint" ]

resolver = "2"
