[package]
name = "dropshot-api-manager"
version = "0.1.0"
edition = "2021"
license.workspace = true
repository.workspace = true
readme = "README.md"
documentation = "https://docs.rs/dropshot-api-manager"

[dependencies]
anyhow = "1.0.99"
atomicwrites = "0.4.4"
camino = "1.2.0"
clap = { version = "4.5", features = ["cargo", "derive", "env"] }
debug-ignore = "1.0.5"
dropshot.workspace = true
fs-err = "3.1.1"
hex = "0.4.3"
indent_write = "2.2.0"
newtype_derive = "0.1.6"
dropshot-api-manager-types.workspace = true
openapiv3 = { version = "2.2.0", features = [ "skip_serializing_defaults" ] }
owo-colors = "4.2.2"
paste = "1.0.15"
semver = "1.0.27"
serde_json.workspace = true
sha2 = "0.10.9"
similar = { version = "2.7.0", features = ["bytes"] }
supports-color = "3.0.2"
textwrap = { version = "0.16.2", features = [ "terminal_size" ] }
thiserror = "2.0"

[dev-dependencies]
assert_matches = "1.5.0"

[lints]
workspace = true
