[package]
name = "dropshot"
description = "expose REST APIs from a Rust program"
version = "0.15.1"
authors = ["David Pacheco <dap@oxidecomputer.com>"]
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/oxidecomputer/dropshot/"
readme = "README-crates.io.md"
keywords = ["rest", "openapi", "async"]
categories = ["network-programming", "web-programming::http-server"]

[lints]
workspace = true

[dependencies]
async-stream = "0.3.6"
async-trait = "0.1.83"
base64 = "0.22.1"
bytes = "1"
camino = { version = "1.1.9", features = ["serde1"] }
debug-ignore = "1.0.5"
form_urlencoded = "1.2.1"
futures = "0.3.31"
hostname = "0.4.0"
http = "1.1.0"
http-body-util = "0.1.2"
indexmap = "2.7.0"
multer = "3.1.0"
paste = "1.0.15"
percent-encoding = "2.3.1"
rustls = "0.22.4"
rustls-pemfile = "2.1.3"
scopeguard = "1.2.0"
semver = "1.0.23"
serde_json = "1.0.133"
serde_path_to_error = "0.1.16"
serde_urlencoded = "0.7.1"
sha1 = "0.10.6"
simple-mermaid = { version = "0.1.1", optional = true }
slog = { version = "2.5.0", features = ["dynamic-keys"] }
slog-async = "2.8.0"
slog-bunyan = "2.5.0"
slog-json = "2.6.1"
slog-term = "2.9.1"
thiserror = "2.0.3"
tokio-rustls = "0.25.0"
toml = "0.8.19"
waitgroup = "0.1.2"

opentelemetry = { version = "0.27", optional = true }
opentelemetry-http = { version = "0.27", features = ["hyper"], optional = true }
opentelemetry-semantic-conventions = { version = "0.27", optional = true }
tracing = { version = "0.1", optional = true }

[dependencies.chrono]
version = "0.4.38"
features = [ "serde", "std", "clock" ]
default-features = false

[dependencies.dropshot_endpoint]
version = "^0.15.1"
path = "../dropshot_endpoint"

[dependencies.hyper]
version = "1.5.1"
features = [ "full" ]

[dependencies.hyper-util]
version = "0.1.10"
features = [ "full" ]

[dependencies.openapiv3]
version = "2.0.0"
features = [ "skip_serializing_defaults" ]

[dependencies.serde]
version = "1.0.215"
features = [ "derive" ]

[dependencies.tokio]
version = "1.41"
features = [ "full" ]

[dependencies.usdt]
version = "0.5.0"
optional = true
default-features = false

[dependencies.uuid]
version = "1.11.0"
features = [ "serde", "v4" ]

[dependencies.schemars]
version = "0.8.21"
features = [ "uuid1" ]

[dev-dependencies]
anyhow = "1.0.93"
async-channel = "2.3.1"
buf-list = "1.0.3"
expectorate = "1.1.0"
hyper-rustls = "0.26.0"
hyper-staticfile = "0.10"
lazy_static = "1.5.0"
libc = "0.2.167"
mime_guess = "2.0.5"
subprocess = "0.2.9"
tempfile = "3.14"
trybuild = "1.0.101"
# Used by the https examples and tests
pem = "3.0"
rcgen = "0.13.1"
# Used in a doc-test demonstrating the WebsocketUpgrade extractor.
tokio-tungstenite = "0.24.0"
# Used in otel-tracing examples
equinix-otel-tools = { git = "https://github.com/nshalman/rust-otel-tools", rev = "cae47d6a0a891bc095a2d920e2bf2ccbda2be178" }

[dev-dependencies.reqwest]
version = "0.12.9"
# Using rustls-tls because it appears the rcgen-generated certificates are not
# supported by the native Windows APIs.
features = [ "json", "rustls-tls" ]

[dev-dependencies.rustls-pki-types]
version = "1.10.0"
# Needed for CertificateDer::into_owned
features = ["alloc"]

[dev-dependencies.schemars]
version = "0.8.21"
features = [ "chrono", "uuid1" ]

[dev-dependencies.slog]
version = "2.5.0"
features = [ "max_level_trace", "release_max_level_debug" ]

# This is required for the build.rs script to check for an appropriate compiler
# version so that `usdt` can be built on stable rust.
[build-dependencies]
version_check = "0.9.5"

[features]
usdt-probes = ["usdt/asm"]
internal-docs = ["simple-mermaid"]
otel-tracing = ["opentelemetry", "opentelemetry-http", "opentelemetry-semantic-conventions"]
tokio-tracing = ["tracing"]

[package.metadata.docs.rs]
features = ["internal-docs"]

[[example]]
name = "otel"
required-features = ["otel-tracing"]
