[package]
name = "dropshot"
description = "expose REST APIs from a Rust program"
version = "0.16.2"
authors = ["David Pacheco <dap@oxidecomputer.com>"]
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/oxidecomputer/dropshot/"
readme = "README-crates.io.md"
keywords = ["rest", "openapi", "async"]
categories = ["network-programming", "web-programming::http-server"]

[lints]
workspace = true

[dependencies]
async-stream = "0.3.6"
async-trait = "0.1.88"
base64 = "0.22.1"
bytes = "1"
camino = { version = "1.1.10", features = ["serde1"] }
debug-ignore = "1.0.5"
form_urlencoded = "1.2.1"
futures = "0.3.31"
hostname = "0.4.0"
http = "1.3.1"
http-body-util = "0.1.3"
indexmap = "2.9.0"
multer = "3.1.0"
paste = "1.0.15"
percent-encoding = "2.3.1"
rustls = "0.22.4"
rustls-pemfile = "2.1.3"
scopeguard = "1.2.0"
semver = "1.0.26"
serde_json = "1.0.140"
serde_path_to_error = "0.1.17"
serde_urlencoded = "0.7.1"
sha1 = "0.10.6"
simple-mermaid = { version = "0.2.0", optional = true }
slog = { version = "2.5.0", features = ["dynamic-keys"] }
slog-async = "2.8.0"
slog-bunyan = "2.5.0"
slog-json = "2.6.1"
slog-term = "2.9.1"
tracing = { version = "0.1.40", optional = true }
tracing-subscriber = { version = "0.3.18", features = ["env-filter"], optional = true }
thiserror = "2.0.12"
tokio-rustls = "0.25.0"
toml = "0.8.23"
waitgroup = "0.1.2"

opentelemetry = { version = "0.30", optional = true }
opentelemetry-http = { version = "0.30", features = ["hyper"], optional = true }
opentelemetry-semantic-conventions = { version = "0.30", optional = true }
opentelemetry-otlp = { version = "0.30", features = ["tonic"], optional = true }
opentelemetry_sdk = { version = "0.30", features = ["rt-tokio"], optional = true }
opentelemetry-stdout = { version = "0.30", optional = true }
tracing-opentelemetry = { version = "0.31", optional = true }

[dependencies.chrono]
version = "0.4.41"
features = [ "serde", "std", "clock" ]
default-features = false

[dependencies.dropshot_endpoint]
version = "^0.16.2"
path = "../dropshot_endpoint"

[dependencies.hyper]
version = "1.6.0"
features = [ "full" ]

[dependencies.hyper-util]
version = "0.1.14"
features = [ "full" ]

[dependencies.openapiv3]
version = "2.2.0"
features = [ "skip_serializing_defaults" ]

[dependencies.serde]
version = "1.0.219"
features = [ "derive" ]

[dependencies.tokio]
version = "1.45"
features = [ "full" ]

[dependencies.usdt]
version = "0.5.0"
optional = true
default-features = false

[dependencies.uuid]
version = "1.17.0"
features = [ "serde", "v4" ]

[dependencies.schemars]
version = "0.8.22"
features = [ "uuid1" ]

[dev-dependencies]
anyhow = "1.0.98"
async-channel = "2.3.1"
buf-list = "1.0.3"
expectorate = "1.2.0"
hyper-rustls = "0.26.0"
hyper-staticfile = "0.10"
lazy_static = "1.5.0"
libc = "0.2.174"
mime_guess = "2.0.5"
subprocess = "0.2.9"
tempfile = "3.20"
trybuild = "1.0.105"
# Used by the https examples and tests
pem = "3.0"
rcgen = "0.13.2"
# Used in a doc-test demonstrating the WebsocketUpgrade extractor.
tokio-tungstenite = "0.24.0"

[dev-dependencies.reqwest]
version = "0.12.20"
# Using rustls-tls because it appears the rcgen-generated certificates are not
# supported by the native Windows APIs.
features = [ "json", "rustls-tls" ]

[dev-dependencies.rustls-pki-types]
version = "1.12.0"
# Needed for CertificateDer::into_owned
features = ["alloc"]

[dev-dependencies.schemars]
version = "0.8.22"
features = [ "chrono", "uuid1" ]

[dev-dependencies.slog]
version = "2.5.0"
features = [ "max_level_trace", "release_max_level_debug" ]

# This is required for the build.rs script to check for an appropriate compiler
# version so that `usdt` can be built on stable rust.
[build-dependencies]
version_check = "0.9.5"

[features]
usdt-probes = ["usdt/asm"]
internal-docs = ["simple-mermaid"]
tracing = ["dep:tracing", "dep:tracing-subscriber"]
otel-tracing = ["tracing", "opentelemetry", "opentelemetry-http", "opentelemetry-semantic-conventions", "opentelemetry-otlp", "opentelemetry_sdk", "opentelemetry-stdout", "tracing-opentelemetry"]

[package.metadata.docs.rs]
features = ["internal-docs"]
