[package]
name = "dropshot_endpoint"
description = "macro used by dropshot consumers for registering handlers"
version = "0.9.1-dev"
authors = ["Adam H. Leventhal <ahl@oxide.computer>"]
edition = "2018"
license = "Apache-2.0"
repository = "https://github.com/oxidecomputer/dropshot/"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1"
quote = "1"
serde_tokenstream = "0.1"

[dependencies.serde]
version = "1.0"
features = [ "derive" ]

[dependencies.syn]
version = "1.0"
features = [ "parsing", "printing" ]

[dev-dependencies]
schema = "0.1.0"
