[package]
name = "dropshot_endpoint"
description = "macro used by dropshot consumers for registering handlers"
version = "0.10.2-dev"
authors = ["Adam H. Leventhal <ahl@oxide.computer>"]
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/oxidecomputer/dropshot/"

[lib]
proc-macro = true

[lints]
workspace = true

[dependencies]
proc-macro2 = "1"
quote = "1"
serde_tokenstream = "0.2"

[dependencies.serde]
version = "1.0"
features = [ "derive" ]

[dependencies.syn]
version = "2.0"
features = [ "full" ]

[dev-dependencies]
schema = "0.1.0"
