[package]
name = "minimal_example"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dropshot = { git = "https://github.com/oxidecomputer/dropshot" }
slog = { version = "2.7" }
slog-term = { version = "2.8" }
slog-async = { version = "2.7" }
anyhow = "1.0"
schemars = { version = "0.8", features = [ "chrono", "uuid" ] }
serde = { version = "1.0" }
serde_json = { version = "1.0" }
tokio = { version = "1.15", features = [ "full" ] }
uuid = { version = "0.8.2", features = ["serde", "v4"] }
