[package]
name = "openapi-manager"
version = "0.1.0"
edition = "2021"
license.workspace = true
repository.workspace = true

[dependencies]
anyhow = "1.0.99"
atomicwrites = "0.4.4"
camino = "1.2.0"
clap = { version = "4.5", features = ["cargo", "derive", "env"] }
debug-ignore = "1.0.5"
dropshot.workspace = true
fs-err = "3.1.1"
hex = "0.4.3"
indent_write = "2.2.0"
itertools = "0.14.0"
newtype_derive = "0.1.6"
# TODO: publish openapi-lint to crates.io
openapi-lint = { git = "https://github.com/oxidecomputer/openapi-lint", branch = "main" }
openapi-manager-types.workspace = true
openapiv3 = { version = "2.2.0", features = [ "skip_serializing_defaults" ] }
owo-colors = "4.2.2"
paste = "1.0.15"
semver = "1.0.27"
serde_json = "1.0.145"
sha2 = "0.10.9"
similar = { version = "2.7.0", features = ["bytes"] }
# TODO: publish slog-error-chain to crates.io
slog-error-chain = { git = "https://github.com/oxidecomputer/slog-error-chain", branch = "main", features = ["derive"] }
supports-color = "3.0.2"
textwrap = { version = "0.16.2", features = [ "terminal_size" ] }
thiserror = "2.0"

[dev-dependencies]
assert_matches = "1.5.0"

[lints]
workspace = true
